Fix modal z-index

--- a/src/App.css
+++ b/src/App.css
@@ -611,7 +611,7 @@ button {
   grid-gap: 1rem;
   width: 100%;
   height: 100%;
-  z-index: 5;
+  z-index: 99;
   justify-items: center;
   justify-content: center;
   align-items: start;
